--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,10 @@ vendor/
 coverage/
 db/schema.rb
 
+config/credentials/test.key
+config/credentials/staging.key
+config/credentials/preview.key
+config/credentials/production.key
+
+
 /config/credentials/test.key
-
-/config/credentials/staging.key
-
-/config/credentials/preview.key
-
-/config/credentials/production.key
-
-/config/master.key
