--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,3 +7,6 @@ AllCops:
 Metrics/BlockLength:
     Exclude:
       - 'config/routes.rb'
+      - 'Rakefile'
+      - '**/*.rake'
+      - 'spec/**/*.rb'
