--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
 Metrics/BlockLength:
     Exclude:
       - 'config/routes.rb'
+      - 'config/environments/*'
       - 'Rakefile'
       - '**/*.rake'
       - 'spec/**/*.rb'
